--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <title>Offerus</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Tribally" %></title>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<%= yield %>
+    <%= stylesheet_link_tag  "application", "main", :media => "all" %>    
+    <%= javascript_include_tag "application","rails.validations" %>
 
-</body>
+    <%= csrf_meta_tags %>
+    <%= yield(:head) %>
+  </head>
+  <body id="main_background">    
+    <div>
+      <div class="container">                
+          <div>              
+            <%#= render 'layouts/navigation' %>            
+          </div>        
+        <div>
+          <%#= render 'layouts/global_menu' %>
+        </div>
+        <div class="main_body">
+          <%#= render 'layouts/messages' %>
+          <%= yield %>
+        </div>
+     
+        <%#= render 'layouts/footer' %>
+      
+      </div>
+      
+     
+
+   </div>
+  </body>
 </html>
