--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,22 +18,20 @@
     <div>
       <div class="container">                
           <div>              
-            <%#= render 'layouts/navigation' %>            
+            <%= render 'layouts/navigation' %>            
           </div>        
         <div>
-          <%#= render 'layouts/global_menu' %>
+          <%= render 'layouts/global_menu' %>
         </div>
         <div class="main_body">
-          <%#= render 'layouts/messages' %>
+          <%= render 'layouts/messages' %>
           <%= yield %>
         </div>
      
-        <%#= render 'layouts/footer' %>
+        <%= render 'layouts/footer' %>
       
       </div>
-      
      
-
    </div>
   </body>
 </html>
