facebook login and email confirmation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,14 +21,14 @@
             <%= render 'layouts/navigation' %>            
           </div>        
         <div>
-          <%= render 'layouts/global_menu' %>
+          <%#= render 'layouts/global_menu' %>
         </div>
         <div class="main_body">
-          <%= render 'layouts/messages' %>
+          <%#= render 'layouts/messages' %>
           <%= yield %>
         </div>
      
-        <%= render 'layouts/footer' %>
+        <%#= render 'layouts/footer' %>
       
       </div>
      
