--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -1,29 +1,97 @@
-// SASS variable overrides must be declared before loading up Active Admin's styles.
-//
-// To view the variables that Active Admin provides, take a look at
-// `app/assets/stylesheets/active_admin/mixins/_variables.css.scss` in the
-// Active Admin source.
-//
-// For example, to change the sidebar width:
-// $sidebar-width: 242px;
-
-// Active Admin's got SASS!
+// Active Admin CSS Styles
 @import "active_admin/mixins";
 @import "active_admin/base";
 
-// Overriding any non-variable SASS must be done after the fact.
-// For example, to change the default status-tag color:
-//
-//   body.active_admin {
-//      .status_tag { background: #6090DB; }
-//   }
-//
-// Notice that Active Admin CSS rules are nested within a
-// 'body.active_admin' selector to prevent conflicts with
-// other pages in the app. It is best to wrap your changes in a 
-// namespace so they are properly recognized. You have options
-// if you e.g. want different styles for different namespaces:
-//
-// .active_admin       applies to any Active Admin namespace
-// .admin_namespace    applies to the admin namespace (eg: /admin)
-// .other_namespace    applies to a custom namespace named other (eg: /other)
+// To customize the Active Admin interfaces, add your
+// styles here:
+
+a, a:link, a:visited{
+    text-decoration:none;
+}
+body{
+	font-size:14px!important;
+}
+body.logged_out #content_wrapper #active_admin_content {
+	border-radius: 5px;
+}
+body.logged_out h2{
+	background:#019BE1;
+	text-shadow:none;
+	-webkit-box-shadow:none;
+	line-height: 25px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+body.logged_out #login a {
+	text-decoration: none;
+}
+input#admin_user_submit.create{
+	background:#019BE1;
+	border:none;
+	border-radius:5px;
+	height: 30px;
+	text-shadow:none;
+	-webkit-box-shadow:none;
+}
+input#admin_user_submit.create:hover{
+	color: #444;
+	background: #FDFDFD;
+	background: -webkit-gradient(linear, left top, left bottom, from(#FDFDFD), to(#EAEAEA));
+	background: -moz-linear-gradient(-90deg, #FDFDFD, #EAEAEA);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#fdfdfd, endColorstr=#eaeaea);
+	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#fdfdfd, endColorstr=#eaeaea);	
+}
+form input[type="submit"]{
+	background:#019BE1;
+	border:none;
+	border-radius:5px;
+	height: 30px;
+	text-shadow:none;
+	-webkit-box-shadow:none;
+	margin-top:2px;	
+}
+form input[type="submit"]:hover{
+	color: #444;
+	background: #FDFDFD;
+	background: -webkit-gradient(linear, left top, left bottom, from(#FDFDFD), to(#EAEAEA));
+	background: -moz-linear-gradient(-90deg, #FDFDFD, #EAEAEA);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#fdfdfd, endColorstr=#eaeaea);
+	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#fdfdfd, endColorstr=#eaeaea);	
+}
+form fieldset.buttons li.cancel a{
+	background:#019BE1;
+	border:none;
+	color:#fff;
+	border-radius:5px;
+	text-shadow:none;
+	-webkit-box-shadow:none;
+	margin-top:2px;
+	line-height: 18px;
+}
+form fieldset.buttons li.cancel a:hover {
+	color: #444;
+	background: #FDFDFD;
+	background: -webkit-gradient(linear, left top, left bottom, from(#FDFDFD), to(#EAEAEA));
+	background: -moz-linear-gradient(-90deg, #FDFDFD, #EAEAEA);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#fdfdfd, endColorstr=#eaeaea);
+	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#fdfdfd, endColorstr=#eaeaea);
+}
+#header{
+	background:#019BE1;
+	text-shadow:none;
+}
+#header h1{
+	color:#fff;
+}
+#header ul#tabs > li a{
+	color:#fff;
+}
+#header #utility_nav span, #header #utility_nav{
+	color:#fff;
+}
+#header ul#tabs > li.current > a{
+	background:#7B8389;
+}
+#footer{
+	display:none;
+}
