--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.fname %>!</p>
 
 <p>Someone has requested a link to change your password, and you can do this through the link below.</p>
 
@@ -6,3 +6,7 @@
 
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
+
+<br>
+<p>Best Regards,</p>
+<p>Tribally Team</p>
