--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,33 @@
-<h2>Sign up</h2>
+<div class="sign_up_header">Create account with Tribally</div>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<table class="sign_up_page_box">
+  <td>
+    <div class="signup_main_box">
+    <%= form_for(resource, :as => resource_name, :html =>{ :autocomplete => "off"}, :url => registration_path(resource_name)) do |f| %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+      <div class="sign_up_fields"><%= f.label :first_name %>
+      <%= f.text_field :fname %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+      <div class="sign_up_fields"><%= f.label :last_name %>
+      <%= f.text_field :lname %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+      <div class="sign_up_fields"><%= f.label :email %>
+      <%= f.email_field :email %></div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+      <div class="sign_up_fields"><%= f.label :password %>
+      <%= f.password_field :password %></div>
 
-<%= render "devise/shared/links" %>
+      <div class="sign_up_fields"><%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation %></div>
+
+      <div class="sign_up_button_page"><%= f.submit "Creat account", :class =>'btn btn-primary' %></div>
+    <% end %>
+    </div>
+  </td>
+  <td>
+    <div class="facebook_connect_button"> 
+      <%= link_to image_tag("/assets/facebook_connect.png"), user_omniauth_authorize_path(:facebook, :display=>"popup"), :class => "popup", :"data-width" => 600, :"data-height" => 400 %>
+    </div>
+  </td>
+</table>
+
