--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,14 +11,46 @@
     </div>
   <% end %>
 
+   
+
   <div class="field">
-    <%= f.label :product_name %><br />
+    <%= f.label :business_name %>
+    <%= f.text_field :business_name %>
+  </div>
+  <div class="field">
+    <%= f.label :members %>
+    <%= f.text_field :members %>
+  </div>
+  <div class="field">
+    <%= f.label :product_name %>
     <%= f.text_field :product_name %>
   </div>
+  <div class="field" id="product_description">
+    <%= f.label :description %>
+    <%= f.text_area :description %>
+  </div><br/><br />
   <div class="field">
-    <%= f.label :tribe_id %><br />
-    <%= f.text_field :tribe_id %>
+    <%= f.label :product_url %>
+    <%= f.text_field :product_url %>
   </div>
+  <div class="field">
+    <%= f.label :price %>
+    <%= f.text_field :price %>
+  </div>
+  
+  <% @product.offers.each_with_index do |offer, index| %>
+  <%= f.fields_for "offers[]", offer do |offer_fields| %>
+    <div class="field">
+      <%= offer_fields.label :price_discount %>
+      <%= offer_fields.text_field :price_discount %>
+    </div>
+    <div class="field">
+      <%= offer_fields.label :minimum_order_quantity %>
+      <%= offer_fields.text_field :min_no_of_buyer %>
+    </div>
+  <% end %>
+  <% end %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
