--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,125 +1,48 @@
-<div class="solar_offer_container">
-        <div class="solar_offer_head_dimension">
-            <div class="solar_offer_details_box">
-              <span class="solar_offer_details_text">Offerussolar.com group near XXXXX,<%= @zipcode %></span>
-            </div>
-             <div class="solar_fb_dimension">
-                  <div class="addthis_toolbox addthis_default_style"  id="fb_dimension_in_solar">
-                    <a class="addthis_button_facebook_like at300b" width="80px" style="width :75px;" ></a>
-                    <a class="addthis_button_tweet" width="80px" style="width :90px;"></a>
-                  </div>
-             </div> 
-               <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-501a736c01ef1239"></script>
-               <div class="solar_offer_count"><center class="count_number">Offers:</center></div>  
-        </div>
-      <div class="solar_offer_detailed_container">
-          <div class="solar_location_container">            
-            <%= image_tag "http://maps.google.com/maps/api/staticmap?center=37.386052,-122.083851&zoom=13&markers=37.386052,-122.083851&size=500x470&sensor=false" %>            
-          </div>
-          <div class="solar_offer_description">This is local solar i want this product how can i purchase this product can you explain me clear.</div>
-          <div class="solar_member_count_box"><br />
-            <span class="solar_number_dimension"><center><%= people(@zipcode) %></center></span>
-            <span class="solar_member_font"><center>people</center></span>
-          </div>
-          <div class="solar_offer_details"><br />
-            <span class="solar_offer_boxcount"><center><%= no_of_offers(@zipcode) %></center></span>
-            <span class="solar_offer_text"><center>offers</center></span>
-          </div>
-          <div class="solar_time_left_details"><br />
-            <span class="solar_time_left"><center>12</center></span>
-            <span class="solar_time_left_text"><center>days left</center></span>
-          </div>
-          <% if is_member(@zipcode, current_user.uid) == true %>
-            <div class="u_r_member">You're a member!</div>
-            <div class="solar_invite_others"><center>Invite others</center></div>
-            <div class="solar_leave_this_group"><center>Leave this group</center></div>
-          <% else %>
-            <div class="text_for_accesssing_this_tribe">You're not a member of this group yet.Fill out the 'my details'section below to get access to this group's local offers</div>
-          <% end %>      
-     </div>
-     
-  <div class="solar_down_border"></div>
-  <div class="solar_boxoffer_details">
-    <p class="text_for_offers_for_this_group">Offer for this group:</p>
-    <div class="offer_table" cellspacing="0" cellpadding="0" border="0" style="opacity:1;">
-      <span class="font_for_offer_business">Business</span>
-      <span class="font_for_offer_system_size">System size</span>
-      <span class="font_for_offer_group_discount">Group discount pricing</span>
-      <span class="font_for_offer_warrenty">Warrenty</span>
-      <span class="font_for_offer_more_info">More info</span>
-      <span class="font_for_offer_i_want_this">I want this!</span>
-    </div>
-    <% if is_member(@zipcode, current_user.uid) == true %>       
-      <div class="solar_table_container">
-        <% if @group_details.offers.size > 0 %>
-          <div class="business_img"><%= image_tag "/assets/images.jpeg" %></div>
-          <div class="system_size"></div>
-          <div class="discount_rate"></div>
-          <div class="warrenty_display"></div>
-          <div class="more_info_display"></div>
-          <div class="i_want_this_display">
-            <input type="button" value="Choose" class="choose_button" />
-          </div>
-        <% end %>        
-      </div>
-    <% else %> 
-      <div class="text_for_member_signin">Offers made to this group are displayed here.You'll need to be signed in and a member of this group to view these offers.<a href="#">Sign in</a> or fill out your details above and click 'join this group' to create a free account.</div>      
-    <% end %>
-  
-    
-  </div>
-  <div class="offers_my_details">
-    <p class="offers_my_details_text">My details</p><br />
-    <p class="description_for_my_details">These details aren't shared wit anyone else in the group,and we'll only share your details with solar retailer if you accept this offer</p>
-    <div class="my_details_form">
-     
-        <%= form_tag do %> 
-      
-      <div class="my_details_fields"><%= label_tag(:fname, "Name:") %></div>    
-      <div class="my_details_fieldstag"><%= text_field_tag(:fname) %></div>
-     
-      <div class="my_details_field_email"><%= label_tag(:email, "Email:") %></div>
-      <div class="my_details_fieldstag"><%= text_field_tag(:email) %></div>
-      <div class="my_details_field_email"> <%= label_tag(:phone_number, "phone number:") %></div>
-        <div class="my_details_fieldstag"> <%= text_field_tag(:phone_number) %></div>
-        <div class="my_details_field_email"> <%= label_tag(:size, "Size of system I'm looking for:") %></div>
-        <div class="my_details_fieldstag"> <%= text_field_tag(:integer) %></div><br />
-      
-        <div class="my_details_field_email"><%= label_tag(:address, "Address:") %></div>
-        <div class="my_details_fieldstag"><%= text_area_tag(:address) %></div>
-        <div><input type="button" value="Join this group" class="my_details_join_this_group"/><%#= submit_tag("Join this group") %></div>
-               
-        <% end %>
-     
-    
-    </div>
-  </div>
-  <div class="solar_comments_container">
-    <div class="solar_comment_text">Comments</div>
-    <%# if product.comments.empty? %>
-  <div class="solar_No_comments_header">
-    <span class="solar_No_comments_text">No comments yet.</span>
-    <span class="commentlink" id="#leave">Leave a comment</span>
-  </div>
-    <div id="leave" class="solar_comments_body_box" style ="display:none">
-    <%= form_tag do  %>
-                         
-      <div class="field">
-        <%= text_area_tag :body %>
-      </div>
-      <div class="actions">
-      <%= submit_tag "Submit", :class => 'global_button' %>
-      </div>
-    <% end %>
-  </div> 
-   
-  </div>
-</div>
 
-<script>
- $(function(){
-   $('.commentlink').click(function(event){      
-      $(event.target.id).toggle();      
-   });
-});
-</script>
+
+
+<p>
+  <b>Business name:</b>
+  <%= @product.business_name %>
+</p>
+
+<p>
+  <b>Members:</b>
+  <%= @product.members %>
+</p>
+
+<p>
+  <b>Product name:</b>
+  <%= @product.product_name %>
+</p>
+
+<p>
+  <b>Description:</b>
+  <%= @product.description %>
+</p>
+
+<p>
+  <b>Product url:</b>
+  <%= @product.product_url %>
+</p>
+
+<p>
+  <b>Price:</b>
+  <%= @product.price %>
+</p>
+
+  <% @product.offers.each do |prod_offer| %>       
+    <p>   
+      <b>price discount:</b>
+      <%= prod_offer.price_discount %>
+    </p> 
+    <p>
+      <b>minimum order quantity:</b>
+      <%= prod_offer.min_no_of_buyer %>
+    </p>
+  <% end %>
+
+
+
+<%= link_to 'Edit', edit_product_path(@product) %> |
+<%= link_to 'Back', products_path %>
